# bathyeditor

./: .gitignore  pyproject.toml  tox.ini
src/bathyeditor/: main.py  requirements.txt
